--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     }
                 </pre>
                 <div class="exp">• Variables declared with the var keyword can NOT have block scope. </div>
-                <div class="exp">• Variables declared inside a { } block can be accessed from outside the block.</div>
+                <div class="exp">• Variables declared inside a { } block can only accessed inside the block.</div>
             </div>
 
             <div class="explain">
@@ -58,7 +58,7 @@
                       }
                 </pre>
                 <div class="exp">• Local variables have Function Scope.</div>
-                <div class="exp">• They can only be accessed from within the function.</div>
+                <div class="exp">• They can only be accessed within the function.</div>
             </div>
 
             <div class="explain">
